--- a/index.html
+++ b/index.html
@@ -72,25 +72,25 @@
 		<section class="gallery">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-3 pic1">
+					<div class="col-s-6 col-3 pic1">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-3 pic2">
+					<div class="col-s-6 col-3 pic2">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-3 pic3">
+					<div class="col-s-6 col-3 pic3">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-3 pic4">
+					<div class="col-s-6 col-3 pic4">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
@@ -98,25 +98,25 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-3 pic5">
+					<div class="col-s-6 col-3 pic5">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-3 pic6">
+					<div class="col-s-6 col-3 pic6">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-3 pic7">
+					<div class="col-s-6 col-3 pic7">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-3 pic8">
+					<div class="col-s-6 col-3 pic8">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
@@ -129,7 +129,7 @@
 		<section class="team">
 			<div class="container">
 				<div class="row">
-					<div class="col-3">
+					<div class="col-s-6 col-3">
 						<div class="portrait">
 							<img src="img/ruth.png">
 						</div>
@@ -148,7 +148,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="col-3">
+					<div class="col-s-6 col-3">
 						<div class="portrait">
 							<img src="img/timothy.png">
 						</div>
@@ -167,8 +167,8 @@
 							</button>
 						</div>
 					</div>
-					<div class="col-3">
-						<div class="portrait">
+					<div class="col-s-6 col-3">
+						<div class="portrait fix">
 							<img src="img/victoria.png">
 						</div>
 						<h2>Victoria Valdez</h2>
@@ -186,8 +186,8 @@
 							</button>
 						</div>
 					</div>
-					<div class="col-3">
-						<div class="portrait">
+					<div class="col-s-6 col-3">
+						<div class="portrait fix">
 							<img src="img/beverly.png">
 						</div>
 						<h2>Beverly Little</h2>
@@ -212,32 +212,34 @@
 		<section class="quotes">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-6 photo">
+					<div class="col-s-12 col-6 photo">
 					</div>
-					<div id="carousel" class="col-6">
-						<ul class="cites">
-							<li>
-								<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
-								<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
-							</li>
-							<li>
-								<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
-								<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
-							</li>
-							<li>
-								<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
-								<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
-							</li>
-							<li>
-								<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
-								<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
-							</li>
-							<li>
-								<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
-								<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>	
-							</li>
-						</ul>
-						<ul class="menu"></ul>
+					<div class="col-s-12 col-6">
+						<div id="carousel">
+							<ul class="cites">
+								<li>
+									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
+									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
+								</li>
+								<li>
+									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
+									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
+								</li>
+								<li>
+									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
+									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
+								</li>
+								<li>
+									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
+									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
+								</li>
+								<li>
+									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
+									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>	
+								</li>
+							</ul>
+							<ul class="menu"></ul>
+						</div>
 					</div>
 				</div>
 			</div>
