--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Active Box</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
@@ -16,11 +18,11 @@
 					<img src="img/activebox.png">
 				</div>
 				<ul>
-					<li><a href="#">FEATURES</a></li>
-					<li><a href="#">WORKS</a></li>
-					<li><a href="#">OUR TEAM</a></li>
-					<li><a href="#">TESTIMONIALS</a></li>
-					<li><a href="#">DOWNLOAD</a></li>
+					<li><a href="#features">FEATURES</a></li>
+					<li><a href="#works">WORKS</a></li>
+					<li><a href="#team">OUR TEAM</a></li>
+					<li><a href="#testimonials">TESTIMONIALS</a></li>
+					<li><a href="#download">DOWNLOAD</a></li>
 				</ul>
 			</nav>
 			<section class="hero">
@@ -30,37 +32,37 @@
 			</section>
 		</header><!-- Header Ends -->
 		<!-- Section Profit Starts -->
-		<section class="profit">
+		<section id="features" class="profit">
 			<div class="container">
 				<div class="row">
-					<div class="col-4 feature">
+					<div class="col-md-4 feature">
 						<img src="img/pencil.png">
 						<h3>EASILY CUSTOMISED</h3>
 						<p>Cras aliquam faucibus quam, eget posuere libero aliquam ac. Donec et mollis lorem, sed sollicitudin augue.</p>
 					</div>
-					<div class="col-4 feature">
+					<div class="col-md-4 feature">
 						<img src="img/rwd.png">
 						<h3>RESPONSIVE READY</h3>
 						<p>Cras aliquam faucibus quam, eget posuere libero aliquam ac. Donec et mollis lorem, sed sollicitudin augue.</p>
 					</div>
-					<div class="col-4 feature">
+					<div class="col-md-4 feature">
 						<img src="img/bulb.png">
 						<h3>MODERN DESIGN</h3>
 						<p>Cras aliquam faucibus quam, eget posuere libero aliquam ac. Donec et mollis lorem, sed sollicitudin augue.</p>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-4 feature">
+					<div class="col-md-4 feature">
 						<img src="img/react.png">
 						<h3>CLEAN CODE</h3>
 						<p>Cras aliquam faucibus quam, eget posuere libero aliquam ac. Donec et mollis lorem, sed sollicitudin augue.</p>
 					</div>
-					<div class="col-4 feature">
+					<div class="col-md-4 feature">
 						<img src="img/folder.png">
 						<h3>READY TO SHIP</h3>
 						<p>Cras aliquam faucibus quam, eget posuere libero aliquam ac. Donec et mollis lorem, sed sollicitudin augue.</p>
 					</div>
-					<div class="col-4 feature">
+					<div class="col-md-4 feature">
 						<img src="img/cloud.png">
 						<h3>DOWNLOAD FOR FREE</h3>
 						<p>Cras aliquam faucibus quam, eget posuere libero aliquam ac. Donec et mollis lorem, sed sollicitudin augue.</p>
@@ -69,28 +71,28 @@
 			</div>
 		</section><!-- Section Profit Ends -->
 		<!-- Section Gallery Starts -->
-		<section class="gallery">
+		<section id="works" class="gallery">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-s-6 col-3 pic1">
+					<div class="col-sm-6 col-md-3 pic1">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-s-6 col-3 pic2">
+					<div class="col-sm-6 col-md-3 pic2">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-s-6 col-3 pic3">
+					<div class="col-sm-6 col-md-3 pic3">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-s-6 col-3 pic4">
+					<div class="col-sm-6 col-md-3 pic4">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
@@ -98,25 +100,25 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-s-6 col-3 pic5">
+					<div class="col-sm-6 col-md-3 pic5">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-s-6 col-3 pic6">
+					<div class="col-sm-6 col-md-3 pic6">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-s-6 col-3 pic7">
+					<div class="col-sm-6 col-md-3 pic7">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
 						</div>
 					</div>
-					<div class="col-s-6 col-3 pic8">
+					<div class="col-sm-6 col-md-3 pic8">
 						<div class="layer">
 							<h3>PROJECT NAME</h3>
 							<p>User Interface Design</p>
@@ -126,10 +128,10 @@
 			</div>
 		</section><!-- Section Gallery Ends -->
 		<!-- Section Team Starts -->
-		<section class="team">
+		<section id="team" class="team">
 			<div class="container">
 				<div class="row">
-					<div class="col-s-6 col-3">
+					<div class="col-sm-6 col-md-3">
 						<div class="portrait">
 							<img src="img/ruth.png">
 						</div>
@@ -148,7 +150,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="col-s-6 col-3">
+					<div class="col-sm-6 col-md-3">
 						<div class="portrait">
 							<img src="img/timothy.png">
 						</div>
@@ -167,7 +169,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="col-s-6 col-3">
+					<div class="col-sm-6 col-md-3">
 						<div class="portrait fix">
 							<img src="img/victoria.png">
 						</div>
@@ -186,7 +188,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="col-s-6 col-3">
+					<div class="col-sm-6 col-md-3">
 						<div class="portrait fix">
 							<img src="img/beverly.png">
 						</div>
@@ -209,62 +211,71 @@
 			</div>
 		</section><!-- Section Team Ends -->
 		<!-- Section Quotes Starts -->
-		<section class="quotes">
+		<section id="testimonials" class="quotes">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-s-12 col-6 photo">
+					<div class="col-sm-6 col-md-6 photo">
 					</div>
-					<div class="col-s-12 col-6">
-						<div id="carousel">
-							<ul class="cites">
-								<li>
+					<div class="col-sm-6 col-md-6">
+						<div id="myCarousel" class="carousel slide" data-ride="carousel">
+						    <!-- Indicators -->
+						    <ol class="carousel-indicators">
+						    	<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						      	<li data-target="#myCarousel" data-slide-to="1"></li>
+						      	<li data-target="#myCarousel" data-slide-to="2"></li>
+						      	<li data-target="#myCarousel" data-slide-to="3"></li>
+						      	<li data-target="#myCarousel" data-slide-to="4"></li>
+						    </ol>
+						    <!-- slides -->
+						    <div class="carousel-inner" role="listbox">
+						      	<div class="item active example-1">
+						      		<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
+									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
+						      	</div>
+						    	<div class="item example-2">
+						    		<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
+									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
+						    	</div>
+						    	<div class="item example-3">
+						    		<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
+									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
+						    	</div>
+								<div class="item example-4">
 									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
 									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
-								</li>
-								<li>
+								</div>
+								<div class="item example-5">
 									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
 									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
-								</li>
-								<li>
-									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
-									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
-								</li>
-								<li>
-									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
-									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
-								</li>
-								<li>
-									<h1>"Integer posuere erat a ante venenantis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."</h1>
-									<p>SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>	
-								</li>
-							</ul>
-							<ul class="menu"></ul>
+								</div>
+						    </div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section><!-- Section Quotes Ends -->
 		<!-- Section Download Starts -->
-		<section class="download">
+		<section id="download" class="download">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-12">
+					<div class="col-md-12">
 						<h2>Are You Ready To Start? Download Now For Free!</h2>
 						<h3>Fusce dapibus, tellus ac cursus commodo</h3>
 						<button>DOWNLOAD HERE</button>
 					</div>
 				</div>
 			</div>
+			<span class="scrollTopButton"><i class="fa fa-arrow-circle-up"></i></span>
 		</section><!-- Section Download Ends -->
 		<!-- Footer Starts -->
 		<footer>
 			<div class="container">
 				<div class="row info">
-					<div class="col-4">
+					<div class="col-sm-4 col-md-4">
 						<h3>LOCATION</h3>
 						<p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
 					</div>
-					<div class="col-4">
+					<div class="col-sm-4 col-md-4">
 						<h3>SHARE WITH LOVE</h3>
 						<div class="socials">
 							<button class="facebook">
@@ -278,7 +289,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="col-4">
+					<div class="col-sm-4 col-md-4">
 						<h3>ABOUT ACTIVEBOX</h3>
 						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
 					</div>
@@ -286,7 +297,7 @@
 			</div>
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-12">
+					<div class="col-sm-12 col-md-12">
 						<p>Copyright &copy; 2017 ActiveBox. All Rights Reserved<br>Made with <i class="fa fa-heart" aria-hidden="true"></i><a href="#"> by Paweł Nykun</a></p>
 					</div>
 				</div>
